# backend/modules/auth/authController.js
@@ -10,14 +10,14 @@ const { bcrypt: bcryptConfig } = require('../../configs/hashing');
 const jwtUtils = require("../../utils/jwtUtils")
 
 const authController = {
-    login : async (req, res) => {
+    login: async (req, res) => {
         try {
             const { email, password } = req.body;
 
-            if (!email || !password ) {
+            if (!email || !password) {
                 return responseUtils.invalidated(res, "validation.required")
             }
-            
+
             const checkEmail = await authService.checkEmail(email)
 
             if (!checkEmail) {
@@ -28,8 +28,8 @@ const authController = {
             if (!passwordMatches) {
                 return responseUtils.invalidated(res, "validation.password");
             }
-            
-            const accessToken = jwtUtils.sign(checkEmail.id,checkEmail.role);
+
+            const accessToken = jwtUtils.sign(checkEmail.id, checkEmail.role);
             const refreshToken = jwtUtils.signRefreshToken(checkEmail.id, checkEmail.role);
 
             const existingToken = await authService.checkTokenByUser(checkEmail.id);
@@ -51,22 +51,22 @@ const authController = {
                 httpOnly: true,          // bảo vệ cookie khỏi truy cập từ JS (XSS)
                 secure: false,           // bật true nếu HTTPS
                 sameSite: "lax",      // hạn chế gửi cookie sang domain khác
-                maxAge: 7* 60 *60 *24 *1000 // 7 ngày
+                maxAge: 7 * 60 * 60 * 24 * 1000 // 7 ngày
             });
-
+            const expiredAt = jwtUtils.getExpiredAt(accessToken);
             const loginData = {
-                    accessToken,
-                    expiredAt: config.jwt.ttl,
-                    user: {
-                        id: checkEmail.id,
-                        email: checkEmail.email,
-                        username: checkEmail.username,
-                        role: checkEmail.role,
-                    },
+                accessToken,
+                expiredAt,
+                user: {
+                    id: checkEmail.id,
+                    email: checkEmail.email,
+                    username: checkEmail.username,
+                    role: checkEmail.role,
+                },
             };
 
-            return responseUtils.ok(res,loginData)
-            
+            return responseUtils.ok(res, loginData)
+
         } catch (error) {
             console.error(error)
             return responseUtils.error(res, error)
@@ -78,13 +78,13 @@ const authController = {
             const refreshToken = req?.cookies?.refresh_token || req?.body?.refresh_token;
 
             if (!refreshToken) {
-            return responseUtils.error(res, "Chưa có refresh Token");
+                return responseUtils.error(res, "Chưa có refresh Token");
             }
 
             // Tìm token trong DB
             const existingToken = await authService.checkToken(refreshToken);
             if (!existingToken) {
-            return responseUtils.notFound(res, "Token không hợp lệ hoặc đã bị xoá");
+                return responseUtils.notFound(res, "Token không hợp lệ hoặc đã bị xoá");
             }
 
             // xoá token
@@ -105,33 +105,33 @@ const authController = {
             return responseUtils.error(res, error);
         }
     },
-    refreshToken : async (req, res) => {
+    refreshToken: async (req, res) => {
         try {
             // Lấy refresh_token từ cookie hoặc trong body
             const refreshToken = req?.cookies?.refresh_token || req?.body?.refresh_token;
 
             if (!refreshToken) {
-            return responseUtils.notFound(res, "Chưa có refresh Token");
+                return responseUtils.notFound(res, "Chưa có refresh Token");
             }
 
             // Tìm token trong DB
             const existingToken = await authService.checkToken(refreshToken);
-                if (!existingToken) {
+            if (!existingToken) {
                 return responseUtils.notFound(res, "Token không hợp lệ hoặc đã bị xoá");
             }
 
             const decoded = jwtUtils.verifyRefreshToken(refreshToken);
-                if (!decoded) {
+            if (!decoded) {
                 return responseUtils.error(res, "Refresh token không hợp lệ");
             }
             const newAccessToken = jwtUtils.sign(decoded.userId, decoded.role);
 
-            return responseUtils.ok(res, { accessToken : newAccessToken})
+            return responseUtils.ok(res, { accessToken: newAccessToken })
         } catch (error) {
             console.error(error);
             return responseUtils.error(res, error);
         }
-    
+
     },
     googleLogin: async (req, res) => {
         try {
@@ -139,10 +139,10 @@ const authController = {
             if (!id_token) return responseUtils.error(res, "Thiếu Google ID token");
 
             const result = await authService.handleGoogleToken(id_token);
-            return responseUtils.ok(res,result);
+            return responseUtils.ok(res, result);
         } catch (error) {
             console.error(error);
-            return responseUtils.error(res, error );
+            return responseUtils.error(res, error);
         }
     }
 }
